--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,19 @@ body {
   justify-content: center;
   align-items: center;
   height: 50vw;
-  background-color: #282c34;
+  background-color: #33334d;
+}
+
+.container-fluid h1 {
+  text-align: center;
+  color: white;
+  font-family: "Indie Flower", cursive;
+}
+
+.container-fluid h2 {
+  text-align: center;
+  color: white;
+  font-size: 17px;
 }
 
 #drum-machine {
@@ -35,6 +47,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Orbitron", sans-serif;
   font-weight: bolder;
   font-size: 20px;
 }
