--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,17 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50vw;
+  /*height: 30vw;*/
   background-color: #33334d;
 }
 
-.container-fluid h1 {
+.container h1 {
   text-align: center;
   color: white;
   font-family: "Indie Flower", cursive;
 }
 
-.container-fluid h2 {
+.container h2 {
   text-align: center;
   color: white;
   font-size: 17px;
@@ -50,4 +50,10 @@ body {
   font-family: "Orbitron", sans-serif;
   font-weight: bolder;
   font-size: 20px;
+}
+
+@media only screen and (max-width: 992px) {
+  #display {
+    margin: 0px 100px 0px -300px;
+  }
 }
