--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /*height: 30vw;*/
   background-color: #33334d;
+  margin-top: 100px;
 }
 
 .container h1 {
