--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-* {
+/** {
   margin: 0;
   padding: 0;
-}
+}*/
 
 body {
   display: flex;
@@ -54,7 +54,7 @@ body {
 
 @media only screen and (max-width: 992px) {
   #body {
-    margin: 50px 0px 0px 100px;
+    margin: 50px 0px 0px 100px !important;
   }
 
   #display {
