--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-/** {
-  margin: 0;
-  padding: 0;
-}*/
-
 body {
   display: flex;
   flex-direction: column;
@@ -31,7 +26,6 @@ body {
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  width: 1000px;
   padding: 50px 0 50px 0;
 }
 
@@ -44,8 +38,7 @@ body {
 }
 
 #display {
-  display: flex;
-  flex-direction: column;
+  display: block;
   align-items: center;
   font-family: "Orbitron", sans-serif;
   font-weight: bolder;
@@ -53,11 +46,7 @@ body {
 }
 
 @media only screen and (max-width: 992px) {
-  #body {
-    margin: 50px 0px 0px 100px !important;
-  }
-
   #display {
-    margin: 0px 100px 0px -300px;
+    margin: 0px 0px 0px 100px;
   }
 }
