--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,12 @@ body {
   grid-template-columns: 100px 100px 100px;
   justify-content: space-evenly;
   grid-gap: 20px;
+  margin-right: -400px;
 }
 
 #display {
-  display: block;
+  display: flex;
+  justify-content: center;
   align-items: center;
   font-family: "Orbitron", sans-serif;
   font-weight: bolder;
@@ -52,5 +54,9 @@ body {
 
   #display {
     margin: 0px 0px 0px 100px;
+  }
+
+  #drum-pads {
+    margin-right: 0 !important;
   }
 }
